--- a/index.html
+++ b/index.html
@@ -117,10 +117,8 @@
 				<p>Let's make it...</p>
 				<p>the best celebration ever</p>
 				<p>and let me share...</p>
-				<p>a piece of happiness to you</p>
-				<p>I made all this...</p>
-				<p>as a birthday present to you</p>
-				<p>thanks for being there</p>
+				<p>a piece of happiness to you</p
+		<p>thanks for being there</p>
 				<p>thanks for the friendship we made</p>
 				<p>thanks for everything</p>
 				<p>I wish you all the best</p>
@@ -150,19 +148,19 @@
 				<p>and make it the best memory..</p>
 				<p>lastly...</p>
 				<p>I'd like to wish you one more time</p>
-				<p>a very happy birthday Xola Mathembisa</p>
+				<p>a very happy birthday dear maggieeee.....</p>
 			</div>
 		</div>
 		<div class="navbar navbar-fixed-bottom">
 			<div class="row">
 				<div class="col-md-6 text-center col-md-offset-3">
-					<button class="btn btn-primary" id="turn_on">Turn On Lights</button>
+					<button class="btn btn-primary" id="turn_on">Turn On Lights idiott</button>
 					<button class="btn btn-primary" id="play">Play Music</button>
-					<button class="btn btn-primary" id="bannar_coming">Let's Decorate</button>
-					<button class="btn btn-primary" id="balloons_flying">Fly With Balloons</button>
-					<button class="btn btn-primary" id="cake_fadein">Most Delicious Cake Ever</button>
+					<button class="btn btn-primary" id="bannar_coming">Let's Decorate maggiee</button>
+					<button class="btn btn-primary" id="balloons_flying">Fly With Balloons :)</button>
+					<button class="btn btn-primary" id="cake_fadein">Most Delicious Cake Ever For minion</button>
 					<button class="btn btn-primary" id="light_candle"> Light Candle</button>
-					<button class="btn btn-primary" id="wish_message">Happy Birthday</button>
+					<button class="btn btn-primary" id="wish_message">Happy Birthday maggieee.....</button>
 					<button class="btn btn-primary" id="story">A mesage for you</button>
 					<!-- <button class="btn btn-primary" id="cake_cut">Lrt's Cut the Cake</button> -->
 				</div>
